# reorg

./: README.md  flake.nix  pyproject.toml
reorg/: __init__.py
reorg/cli/: __init__.py  __main__.py  main.py
